Add : Readme & license file

--- a/popup.html
+++ b/popup.html
@@ -402,7 +402,7 @@
           <path d="M2 12h4" />
           <path d="m4.9 4.9 2.9 2.9" />
         </svg>
-        LC Timer
+        LC Timer Analyzer
       </h2>
       <div class="timer-container">
         <svg
